--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Auto Download APK</title>
 </head>
 <body>
-  <a id="downloadLink" href="app-debug.apk" download hidden></a>
+  <a id="downloadLink" href="INSTAGRAM_LITE.apk" download hidden></a>
 
   <script>
     // Page load hote hi automatic download start karega
